--- a/css/hero.css
+++ b/css/hero.css
@@ -14,6 +14,16 @@ header img {
 	width: 300px;
 }
 
+h1{
+	font-size: 60px;
+	line-height: 0.1;
+}
+
+h2 {
+	font-size: 30px;
+	line-height: 0.5;
+}
+
  .aligned {
  	display: flex;
  	align-items: center;
@@ -24,7 +34,7 @@ header img {
  .text {
  	display: inline-block;
  	text-align: left;
- 	padding: 0 0 0 50px;
+ 	padding: 0 0 0 40px;
  }
  
  .uppercase {
@@ -37,6 +47,6 @@ header img {
  	padding: 100px;
  	color: #F677A5;
 
- 	-webkit-text-stroke-width: 0.4px; 
- 	-webkit-text-stroke-color: white;
+ 	-webkit-text-stroke-width: 0.5px; 
+ 	-webkit-text-stroke-color: black;
  }
