--- a/css/hero.css
+++ b/css/hero.css
@@ -55,6 +55,12 @@ h2 {
  	-webkit-text-stroke-color: black;
  }
 
+ .listText {
+ 	font-size: 20px;
+
+ 	max-width: 35%;
+ }
+
 .container {
 	width: 100%;
 	background-color: #F677A5;
