--- a/css/hero.css
+++ b/css/hero.css
@@ -5,7 +5,7 @@ body {
 
 main {
 	background-color: #F677A5;
-	margin: 15px;
+	margin: 0 15px;
 }
 
 header {
@@ -57,8 +57,10 @@ h2 {
 
  .listText {
  	font-size: 20px;
+ }
 
- 	max-width: 35%;
+ .listHeader {
+ 	padding: 30px;
  }
 
 .container {
@@ -73,7 +75,9 @@ h2 {
 	height: 700px;
 
 	background-color: #F677A5;
-	border: 1px solid yellow;
+	border-right: 0.5px solid black;
+
+	display: flex;
 }
 
 .pantherBox {
@@ -81,5 +85,18 @@ h2 {
 	height: 700px;
 
 	background-color: #F677A5;
-	border-left: 1px solid yellow;
+	border-left: 0.5px solid black;
+
+	display: flex;
+}
+
+.footerBox {
+	margin: 15px 15px;
+	padding: 10px;
+
+	background-color: #417DA3;
+
+	text-align: center;
+	font-size: 18px;
+	line-height: 5px;
 }
